hard-gists/f676b9bd2e6930dda95c/run.log
=== Docker Run Log for f676b9bd2e6930dda95c ===
Started at: Mi 29. Okt 21:27:55 CET 2025

[2025-10-29 21:27:56] START: Running container for f676b9bd2e6930dda95c
[2025-10-29 21:27:56] SUCCESS: Container 448cd64b6d19bc770dd85239fae62706744e7495718a760927d9f9df05774bfc started for f676b9bd2e6930dda95c
=== Container logs for f676b9bd2e6930dda95c ===
  File "/snippet.py", line 9
    print "The Accession numbers for protein sequence provided:"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for f676b9bd2e6930dda95c ===
[2025-10-29 21:27:58] INFO: Container 448cd64b6d19bc770dd85239fae62706744e7495718a760927d9f9df05774bfc has stopped
